updated Donations, addDonations and controlers, added edit-establishment route

--- a/public/sass/partials/_modal.scss
+++ b/public/sass/partials/_modal.scss
@@ -1,8 +1,10 @@
 @include mobile {
   .modal-card {
     width: $modal-card-width-mobile;
-    .devider-y {
+    .devider-l,
+    .devider-r {
       border-right: none;
+      border-left: none;
     }
   }
 }
