--- a/views/mixins/_donationForm.pug
+++ b/views/mixins/_donationForm.pug
@@ -1,6 +1,13 @@
 mixin donationForm()
+    - var d = new Date()
+    - var currDate = d.getDate()
+    - var currMonth = d.getMonth() + 1 //Months are zero based
+    - var currYear = d.getFullYear()
+    - if(currDate < 10) currDate = '0'+ currDate
+    - if(currMonth < 10) currMonth = '0' + currMonth
+    - var today = `${currYear}-${currMonth}-${currDate}`
     .columns.is-centered.is-vcentered.is-full-height
-        .column.is-full-touch.is-three-quarters-desktop.is-half-widescreen
+        .column.is-full-touch.is-three-quarters-desktop.is-three-fifths-widescreen
             .card
                 .card-content
                     form.container.is-max-desktop.donation-form(action=`/donations/donation/add/${user.id}` method="POST")
@@ -15,15 +22,18 @@ mixin donationForm()
                                 a.button.is-medium.is-primary.is-link.add-tag Add
                         .field
                             .control
-                                textarea.textarea(placeholder="Include the quantities of items in donation, as well as any information you think might be helpful." name='description' required)
+                                button.button.is-medium.is-fullwidth.is-link(id='donationUploadBtn')
+                                    span.icon.is-small
+                                        ion-icon(name="camera-outline")
+                                    span Add Image
                         .field
-                            .control 
-                                button.button.is-medium.is-fullwidth.is-info(id='donationUploadBtn') Add Image
+                            .control
+                                textarea.textarea(placeholder="Include the quantities of items in donation, as well as any information you think might be helpful." name='description' required)
                         .field
                             label.label Expiry date
                             p.help For donations containing multiple expiry dates provide the closest one.
                             .control
-                                input.input(type="date" id="start" name="expiryDate" required)
+                                input.input(type="date" id="start" min=today name="expiryDate" required)
                         label.label Approximate weight
                         .field.has-addons
                             p.control.is-expanded
