added donation preview to business overview model

--- a/views/donations.pug
+++ b/views/donations.pug
@@ -31,23 +31,7 @@ block append content
                 span.icon.is-small.mr-2
                   ion-icon(src=`/icons/box.svg`)
                 span.donor-name
-              .box.my-3
-                .columns.is-vcentered
-                  .column.is-narrow.is-flex.is-justify-content-center
-                    .image.is-32x32
-                        img.is-rounded(src="https://eu.ui-avatars.com/api/?name=McDonalds")
-                  .column.has-text-centered-mobile
-                    p.title.is-6.my-1 Donation contents
-                    p.is-size-6.my-1  Pastries, vegetables, packaged food
-                  .column.is-narrow.has-text-centered-mobile.devider-l.pl-5
-                    p.title.is-6.my-1 Weight
-                    p.is-size-6.my-1  2.3kg
-                  .column.is-narrow.has-text-centered-mobile.devider-r.pr-5
-                    p.title.is-6.my-1 Expiry date
-                    p.is-size-6.my-1  May 16, 2021
-                  .column.is-narrow.is-flex.is-justify-content-center.pl-4
-                    a.is-link.is-hidden-mobile(href="#") View
-                    a.button.is-link.is-hidden-tablet(href="#") View Donation
+              .donations
               label.has-text-weight-semibold.mb-2.is-flex.is-align-items-center
                 span.icon.is-small.mr-2
                   ion-icon(src=`/icons/clock.svg`)
