--- a/views/editEstablishment.pug
+++ b/views/editEstablishment.pug
@@ -6,4 +6,4 @@ block header
     +navbarDashboard()
 
 block prepend content
-  - var view = '/edit-establishment'
+  - var view = '/establishment/edit'
