--- a/views/mixins/_donationTable.pug
+++ b/views/mixins/_donationTable.pug
@@ -43,8 +43,8 @@ mixin donationTable(donations = {}, pages = 0)
                         small.has-text-grey.is-abbr-like(title='Oct 25, 2020') Oct 25, 2020
                       td.is-actions-cell
                         .buttons.is-right
-                          button.button.is-small.is-success(type='button') View
-                            //span.icon O
+                          button.button.is-small.is-link(type='button') View
+                          button.button.is-small.is-danger(type='button') Cancel
               .notification
                 .level
                   .level-left
