--- a/views/presskit.pug
+++ b/views/presskit.pug
@@ -1,3 +1,14 @@
-extends dashboard 
+extend dashboard
+include mixins/_navbarDashboard
+include mixins/_presskitCard
 
-block primary
+block  header
+  +navbarDashboard()
+
+block prepend content
+  - var view = '/presskit'
+block append content
+    section.section.is-main-section
+      .columns.is-flex-wrap-wrap.is-justify-content-left
+        each poster in h.presskitPosters
+          +presskitCard(poster)
