reworked donation table & added pagination handler

--- a/public/sass/partials/_table.scss
+++ b/public/sass/partials/_table.scss
@@ -32,6 +32,12 @@ table.table {
       vertical-align: middle;
     }
   }
+  tr.donation-row {
+    display: none;
+    &[data-page="0"] {
+      display: table-row;
+    }
+  }
 }
 
 .b-table {
