--- a/views/mixins/_workingHoursInput.pug
+++ b/views/mixins/_workingHoursInput.pug
@@ -1,9 +1,11 @@
-mixin workingHoursInput(day)
+mixin workingHoursInput(day, open = null)
+    - var workingHours = ['',''];
+    - if(open !== null) workingHours = open.split('-');
     .field.is-grouped.is-horizontal.is-align-items-center.working-hours
         label.has-text-weight-semibold(for='day') #{day}
         input.switch.is-rounded.pt-0(type='checkbox' id=`switch${day}`)
         label.pt-0(for=`switch${day}`) .
         label.mx-3(for='start-time') From
-        input.input(type="time" value="" placeholder="--:--" name=`start-time` disabled)
+        input.input(type="time" value=workingHours[0] placeholder="--:--" name=`start-time` disabled)
         label.mx-3(for='finish-time') To
-        input.input(type="time" value="" placeholder="--:--" name=`finish-time` disabled)
+        input.input(type="time" value=workingHours[1] placeholder="--:--" name=`finish-time` disabled)
