improved homepage responsiveness, fixed menu rendering, added directions API

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -18,7 +18,7 @@
 @import "partials/_nav-bar";
 @import "partials/_aside";
 @import "partials/_title-bar";
-@import "partials/hero.section";
+@import "partials/_index-page";
 @import "partials/_card";
 @import "partials/_table";
 @import "partials/_tiles";
