--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,9 +32,7 @@ block doc-header
     block content
       p This is the default!
 
-    block footer
-      .footer
-
     block scripts
       script(src="/javascripts/pantree-app.js")
       script(src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js")
+      script(src="/dist/js/mobileMenu.js")
