--- a/views/mixins/_indexMenu.pug
+++ b/views/mixins/_indexMenu.pug
@@ -1,3 +1,3 @@
 mixin indexMenu()
   each item in h.menu
-    a.nav__link.navbar-item(href=item.slug ) #{item.title}
+    a.nav__link.navbar-item.has-text-centered(href=item.slug ) #{item.title}
