--- a/views/mixins/_presskitCard.pug
+++ b/views/mixins/_presskitCard.pug
@@ -1,13 +1,13 @@
 mixin presskitCard(poster)
-  .column.is-half-tablet.is-one-quarter-widescreen
+  .column.is-half-tablet.is-one-third-desktop.is-one-quarter-widescreen
     .card
       .card-image
         figure.image
           img(src=`/posters/${poster.no}.png` alt=`${poster.title} thumbnail`)
       .card-content
-        p.title.is-5 #{poster.title}
+        p.title.is-4.mb-3 #{poster.title}
         - var tags = poster.tags
         each tag in tags
-          span.tag.is-primary.is-light.mr-1= tag
+          span.tag.is-primary.is-light.mr-1.mb-1= tag
       footer.card-footer
         a.card-footer-item(target='_blank' href=`/posters/${poster.no}.pdf`) Download
