--- a/public/sass/partials/_index-page.scss
+++ b/public/sass/partials/_index-page.scss
@@ -1,8 +1,14 @@
 .hero {
     min-width: 100vw;
-    min-height: 100vh;
+    min-height: 105vh;
     background-image: url("../../heroBackground.svg");
     background-size: cover;
+}
+@include mobile {
+    .hero {
+        min-height: 100vh;
+        background-image: none;
+    }
 }
 .goal {
     .card-content {
