--- a/views/editEstablishment.pug
+++ b/views/editEstablishment.pug
@@ -11,3 +11,6 @@ block prepend content
 block append content
   .section
     +editEstablishmentForm()
+block prepend scripts
+  script(type="module" src="/dist/js/openingHoursSwitch.js")
+  script(type="module" src="/dist/js/editEstablishmentHandler.js")
