--- a/views/mixins/_tableRowFridge.pug
+++ b/views/mixins/_tableRowFridge.pug
@@ -3,7 +3,7 @@ mixin tableRowFridge(donation, page)
         td.is-image-cell
             .image
                 img.is-rounded(src=`https://eu.ui-avatars.com/api/?name=${'John Doe'}&background=random`)
-        td(data-label='Name') Rebecca Bauch
+        td(data-label='Name') donation
         td(data-label='Donation contents') Daugherty-Daniel
         td(data-label='Weight') South Cory
         td(data-label='Distance') 1.7 km
