--- a/views/mixins/_workingHoursInput.pug
+++ b/views/mixins/_workingHoursInput.pug
@@ -3,7 +3,7 @@ mixin workingHoursInput(day, open = null)
     - if(open !== null) workingHours = open.split('-');
     .field.is-grouped.is-horizontal.is-align-items-center.working-hours
         label.has-text-weight-semibold(for='day') #{day}
-        input.switch.is-rounded.pt-0(type='checkbox' id=`switch${day}`)
+        input.switch.is-rounded.pt-0(type='checkbox' id=`switch${day}` checked=`${open === null ? 'false' : 'true'}` disabled=`${open === null ? 'true' : 'false'}`)
         label.pt-0(for=`switch${day}`) .
         label.mx-3(for='start-time') From
         input.input(type="time" value=workingHours[0] placeholder="--:--" name=`start-time` disabled)
