--- a/public/sass/partials/_map.scss
+++ b/public/sass/partials/_map.scss
@@ -5,3 +5,15 @@
     width: 100%;
     height: 50%;
 }
+#directions-panel {
+    display: none;
+    width: 100%;
+    height: 50%;
+    overflow-y: scroll;
+}
+.adp table {
+    font-family: $family-primary !important;
+    &.adp-directions {
+        width: 100% !important;
+    }
+}
