--- a/views/mixins/_donationTable.pug
+++ b/views/mixins/_donationTable.pug
@@ -17,6 +17,7 @@ mixin donationTable(tableTitle, donations = {})
                         th Business
                         th Donation contents
                         th Weight
+                        th Added on
                         th Expiry date
                         th
                     tbody
@@ -30,6 +31,7 @@ mixin donationTable(tableTitle, donations = {})
                           th Claimed by
                           th Donation contents
                           th Weight
+                          th Added on
                           th Expiry date
                           th
                     tbody
